--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
-*.class
+/*
+ * To change this template, choose Tools | Templates
+ * and open the template in the editor.
+ */
+package loops3;
 
-# Package Files #
-*.jar
-*.war
-*.ear
+/**
+ *
+ * @author 041312268
+ */
+public class Loops3 {
+
+    /**
+     * @param args the command line arguments
+     */
+    public static void main(String[] args) {
+        // TODO code application logic here
+        int counter; 
+        
+        for (counter = 0; counter < 10; counter+=5)
+    System.out.print(counter + " ");
+System.out.println();
+
+    }
+}
