--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ public class Loops3 {
      * @param args the command line arguments
      */
     public static void main(String[] args) {
-        // TODO code application logic here
+        // Hi there!
         int counter; 
         
         for (counter = 0; counter < 10; counter+=5)
